--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <meta name="description" content="A Simple Shoe Shop">
     <meta name="keywords" content="A Simple Shoe Shop">
     <meta name="author" content="Kofoworola">
-    <link rel="stylesheet" href="./resources/styles.css">
+    <link rel="stylesheet" href="./resources/styles/styles.css">
     <link rel="stylesheet" href="./resources/styles/medisQueries.css">
     <title>Shoe Shop</title>
 </head>
 
 <body>
     <header>
-        <div class="logo"></div>
+        <div class="logo">
+            <img src="./resources/images/nike-logo-removebg-preview.png" alt="">
+        </div>
         <ul>
             <li>Man</li>
             <li>Woman</li>
