--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <meta name="author" content="Kofoworola">
     <link rel="stylesheet" href="./resources/styles/styles.css">
     <link rel="stylesheet" href="./resources/styles/medisQueries.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Shoe Shop</title>
 </head>
 
@@ -25,14 +33,17 @@
             <li>New In</li>
         </ul>
         <div class="icon-buttons">
-            search
+            <span class="material-symbols-outlined"></span>
+            <span class="material-symbols-outlined"></span>
+            <span class="material-symbols-outlined"></span>
+
             like
             buy
         </div>
     </header>
     <main>
         <section class="shoe-image">
-            <img src="./" alt="" srcset="">
+            <img src="./resources/images/bluecenter-removebg-preview.png" alt="" srcset="">
         </section>
         <section class="hero">NIKEFAIR</section>
         <section class="hero2">
