changed header spacings

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="./resources/styles/medisQueries.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -23,27 +20,30 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./resources/images/nike-logo-removebg-preview.png" alt="">
+            <img src="./resources/images/nike-logo-removebg-preview.png" alt="Nike Logo" width="100px" height="30px" >
         </div>
-        <ul>
+        <ul class="menu-items">
             <li>Man</li>
             <li>Woman</li>
             <li>Kids</li>
             <li>Accessories</li>
             <li>New In</li>
         </ul>
-        <div class="icon-buttons">
-            <span class="material-symbols-outlined"></span>
-            <span class="material-symbols-outlined"></span>
-            <span class="material-symbols-outlined"></span>
 
-            like
-            buy
+        <div class="icon-buttons">
+            <span><img src="./resources/images/searching.svg" alt="searching icon"
+                    class="material-symbols-outlined"></span>
+            <span><img src="./resources/images/favourite.svg" alt="favourite icon"
+                    class="material-symbols-outlined"></span>
+            <span class="shopping-box"><img src="./resources/images/shopping.svg" alt="shopping icon"
+                    class="material-symbols-outlined shopping-img"></span>
+            </span>
+
         </div>
     </header>
     <main>
         <section class="shoe-image">
-            <img src="./resources/images/bluecenter-removebg-preview.png" alt="" srcset="">
+            <img src="./resources/images/bluecenter-removebg-preview.png" alt=" Center Nike Shoe" width="300px" height="300px">
         </section>
         <section class="hero">NIKEFAIR</section>
         <section class="hero2">
@@ -65,7 +65,8 @@
     </main>
     <hr>
     <footer>
-        <div class="ft-nike-shoe-left">
+        <div class="ft-nike-shoe-left shoe-box">
+            <div class="shoe-left"><img src="./resources/images/blackleft-removebg-preview.png" alt=""></div>
             <h3>Nike Air Force 1 LV8</h3>
             <p>$95.00</p>
             <span>Icon</span>
@@ -77,7 +78,8 @@
                     foam. So you can doing what you love</p>
                 <button>Shop Now</span>
         </div>
-        <div class="ft-nike-shoe-right">
+        <div class="ft-nike-shoe-right shoe-box">
+            <div class="shoe-right"><img src="./resources/images/whiteright-removebg-preview.png" alt=""></div>
             <h3>Nike Force 1 Fontanka</h3>
             <p>$95.00</p>
             <span>Icon</span>
