uploaded new cart

--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
                 <h1>NIKE AIR</h1>
             </section>
             <section class="hero2">
-                <div class="collections-shape">
-                    <!-- <p class="explore-text"> EXPLORE ALL COLLECTION</p> -->
-                    <span class="explore-text1 explore-text">E</span>
-                    <span class="explore-text2 explore-text">X</span>
-                    <span class="explore-text3 explore-text">P</span>
-                    <span class="explore-text4 explore-text">L</span>
-                    <span class="explore-text5 explore-text">O</span>
-                    <span class="explore-text6 explore-text">R</span>
-                    <span class="explore-text7 explore-text">E</span>
-                    <span class="explore-text8 explore-text">A</span>
-                    <span class="explore-text9 explore-text ">L</span>
-                    <span class="explore-text10 explore-text">L</span>
-                    <span class="explore-text11 explore-text">C</span>
-                    <span class="explore-text12 explore-text">O</span>
-                    <span class="explore-text13 explore-text">L</span>
-                    <span class="explore-text14 explore-text">L</span>
-                    <span class="explore-text15 explore-text">E</span>
-                    <span class="explore-text16 explore-text">C</span>
-                    <span class="explore-text17 explore-text">T</span>
-                    <span class="explore-text18 explore-text">I</span>
-                    <span class="explore-text19 explore-text">O</span>
-                    <span class="explore-text20 explore-text">N</span>
-
+                <div class="curve-circle">
+                    <div class="curved-text">
+                        <span class="explore-text1">E</span>
+                        <span class="explore-text2 explore-text">X</span>
+                        <span class="explore-text3 explore-text">P</span>
+                        <span class="explore-text4 explore-text">L</span>
+                        <span class="explore-text5 explore-text">O</span>
+                        <span class="explore-text6 explore-text">R</span>
+                        <span class="explore-text7 explore-text">E</span>
+                        <span class="explore-text8 explore-text">A</span>
+                        <span class="explore-text9 explore-text ">L</span>
+                        <span class="explore-text10 explore-text">L</span>
+                        <span class="explore-text11 explore-text">C</span>
+                        <span class="explore-text12 explore-text">O</span>
+                        <span class="explore-text13 explore-text">L</span>
+                        <span class="explore-text14 explore-text">L</span>
+                        <span class="explore-text15 explore-text">E</span>
+                        <span class="explore-text16 explore-text">C</span>
+                        <span class="explore-text17 explore-text">T</span>
+                        <span class="explore-text18 explore-text">I</span>
+                        <span class="explore-text19 explore-text">O</span>
+                        <span class="explore-text20 explore-text">N</span>
+                    </div>
                     <span class="arrow-icon">arrow</span>
                     <p class="year-2022">2022</p>
                 </div>
